--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sass": "^1.38.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts --openssl-legacy-provider build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
